# harmonicDeformer

./: CMakeLists.txt  Makefile  README.md  cell.cpp  cell.h  computeWeightsCmd.cpp  computeWeightsCmd.h  grid.cpp  grid.h  harmonicDeformer.cpp  harmonicDeformer.h  harmonicDeformerCmd.cpp  harmonicDeformerCmd.h  intersect.cpp  intersect.h  mathUtils.cpp  mathUtils.h  pluginMain.cpp  solver.cpp  solver.h
